[package]
name = "tractor"
version = "0.1.0"
authors = ["Austin Jones <austinbaysjones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22"
dirs = "2.0.2"
uuid = { version = "0.7.4", features = ["v4"] }
same-file = "1.0.5"
# TODO: file locking for cache
# file-lock = "1.1.20"
rev_lines = "0.2.1"
